3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conversor-temperatura-service
  namespace: conversao-temperatura
spec:
  selector:
    app: site-temperatura
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
