deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: conversao-temperatura
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conversor-temperatura-deploy
  namespace: conversao-temperatura
spec:
  replicas: 2
  selector:
    matchLabels:
      app: site-temperatura
  template:
    metadata:
      labels:
        app: site-temperatura
    spec:
      containers:
        - name: site-temperatura
          image: leandroaurelio/conversor-temperatura:arm
          ports:
            - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: conversor-temperatura-service
  namespace: conversao-temperatura
spec:
  selector:
    app: site-temperatura
  ports:
  - port: 80
    targetPort: 8080
#    nodePort: 30005
#  type: LoadBalancer
  
---

apiVersion: networking.k8s.io/v1  #extensions/v1beta1 (k8s)
kind: Ingress
metadata:
  labels:
    app: site-temperatura
  name: site-temperatura-web-ui
  namespace: conversao-temperatura
spec:
  rules:
  - host: site-temperatura.100.86.25.28.nip.io #wordpress.leandroaurelio.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: site-temperatura
            port: 
              number: 80
